--- a/turbo.json
+++ b/turbo.json
@@ -55,6 +55,7 @@
     "TELEGRAM_BOT_TOKEN",
     "TELEGRAM_BOT_START_DELAY_MS",
     "PASSPORT_CLIENT_URL",
-    "PRETIX_SYNC_DISABLED"
+    "PRETIX_SYNC_DISABLED",
+    "IS_LOCAL_HTTPS"
   ]
 }
